--- a/style.css
+++ b/style.css
@@ -63,6 +63,11 @@ body {
   */
 }
 
+p {
+  margin: 10px 0;
+    padding: 5px;
+    font-size: xx-large;
+}
 /*
 Вёрстка в проекте mobile-first - сперва мы указываем все размеры и свойства для 
 мобильного отображения (viewport), потом с помощью медиа-query ниже меняем их на 
